--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -47,6 +47,9 @@
     border: 2px solid #FFF;
     cursor: pointer;
 }
+.hero-resume a{
+    color: white;
+}
 .hero-connect:hover{
     border: 2px solid white;
 }
